// ═══════════════════════════════════════════════════
// Lumapse — Modelo Lógico Relacional
// Generado automáticamente desde src/services/sqlite/connection.js
// PP3 · IES 6023 "Dr. Alfredo Loutaif" · 2026
// Motor: SQLite · Herramienta: dbdiagram.io
// Fecha de generación: 2026-07-15
// ═══════════════════════════════════════════════════
//
// Instrucciones para regenerar:
//   python3 scripts/generate-dbml-from-code.py
//
// Verificación sin sobrescribir (CI):
//   python3 scripts/generate-dbml-from-code.py --check
//
// Nota: La tabla "metadata" aparece sin relaciones porque es
// una tabla técnica de sistema (clave-valor) para control de
// migraciones y flags internos. No pertenece al dominio del
// negocio, pero se incluye por completitud del modelo físico.
// ═══════════════════════════════════════════════════

Table subjects {
  id              TEXT    [pk, note: "UUID v4 generado en cliente"]
  name            TEXT    [not null, note: "Nombre de la Materia o Sección"]
  parentSubjectId TEXT    [note: "NULL = Materia raíz | UUID = Sección hija"]
  archived        INTEGER [default: 0, note: "0 = activa | 1 = archivada"]
  color           TEXT    [note: "Hex opcional (ej: #a3e635)"]
  createdAt       TEXT    [not null, note: "ISO 8601 UTC"]
  deletedAt       TEXT

  note: "Modela Materias (parentSubjectId = NULL) y Secciones (parentSubjectId = UUID). Profundidad máx: 2 niveles (DP-004)."
}

Table notes {
  id          TEXT    [pk, note: "UUID v4 generado en cliente"]
  title       TEXT    [note: "Título explícito opcional; el H1 inicial se usa solo como fallback y “Sin título” como valor final"]
  content     TEXT    [note: "Markdown puro, sin límite de tamaño"]
  pinned      INTEGER [default: 0, note: "0 = normal | 1 = fijada al tope"]
  archived    INTEGER [default: 0, note: "0 = activa | 1 = archivada"]
  subjectId   TEXT    [note: "NULL = Entrada | UUID = en Materia o Sección"]
  createdAt   TEXT    [not null, note: "ISO 8601 UTC · Inmutable"]
  updatedAt   TEXT    [not null, note: "ISO 8601 UTC · Auto-actualizado en cada guardado"]
  statusEmoji TEXT
  deletedAt   TEXT
}

Table academic_events {
  id        TEXT [pk, note: "UUID v4 generado en cliente"]
  type      TEXT [not null, note: "parcial | final | tp | exposicion"]
  title     TEXT [note: "Descripción breve opcional"]
  date      TEXT [not null, note: "Fecha ISO local YYYY-MM-DD"]
  subjectId TEXT [note: "NULL = sin materia | UUID = Materia o Sección asociada"]
  createdAt TEXT [not null, note: "ISO 8601 UTC · Inmutable"]
  updatedAt TEXT [not null, note: "ISO 8601 UTC · Auto-actualizado al editar"]

  note: "Fechas académicas puntuales como recordatorio visual pasivo integrado al Heatmap (DP-007)."
}

Table metadata {
  key   TEXT [pk, note: "Identificador de propiedad (ej: indexeddb_migrated)"]
  value TEXT [note: "Valor de la propiedad"]

  note: "Tabla técnica clave-valor para control de migraciones y flags de sistema."
}

// ═══════════════════════════════════════════════════
// RELACIONES
// ═══════════════════════════════════════════════════
// FECHA ACADÉMICA puede asociarse a una MATERIA o SECCIÓN (N:1)
// ON DELETE SET NULL → si se elimina la materia, la fecha sobrevive sin materia
Ref: academic_events.subjectId > subjects.id

// NOTA pertenece a una MATERIA o SECCIÓN (N:1)
// ON DELETE SET NULL → si se elimina la materia, la nota vuelve a Entrada
Ref: notes.subjectId > subjects.id

// SECCIÓN es hija de una MATERIA (N:1, auto-referencial)
// ON DELETE CASCADE → si se elimina la materia, sus secciones se eliminan
Ref: subjects.parentSubjectId > subjects.id
